--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@react-native-community/datetimepicker": "^3.0.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
@@ -10,11 +12,16 @@
     "google-maps-react": "^2.0.6",
     "react": "^16.13.1",
     "react-charts": "^2.0.0-beta.7",
+    "react-date-picker": "^8.0.3",
     "react-dom": "^16.13.1",
+    "react-mobile-datepicker": "^4.0.2",
     "react-modal": "^3.11.2",
+    "react-native-date-picker": "^3.2.3",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
-    "recharts": "^1.8.5"
+    "react-ultra-date-picker": "^1.1.6",
+    "recharts": "^1.8.5",
+    "rmc-date-picker": "^6.0.10"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -36,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@babel/plugin-transform-react-jsx": "^7.10.4"
   }
 }
