--- a/package.json
+++ b/package.json
@@ -3,9 +3,10 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.0.0",
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
     "@nivo/bar": "^0.62.0",
-    "@nivo/line": "^0.62.0",
+    "@nivo/line": "^0.65.1",
     "@react-native-community/datetimepicker": "^3.0.2",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
@@ -53,7 +54,8 @@
     ]
   },
   "devDependencies": {
-    "@babel/plugin-transform-react-jsx": "^7.10.4",
-    "babel-cli": "^6.26.0"
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/plugin-transform-react-jsx": "^7.10.4"
   }
 }
