--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "@types/recharts": "^1.8.16",
+    "classnames": "^2.2.6",
     "d3": "^6.2.0",
     "d3-scale": "^3.2.3",
     "google-map-react": "^2.0.8",
@@ -17,9 +18,11 @@
     "react-charts": "^2.0.0-beta.7",
     "react-dom": "^16.13.1",
     "react-modal": "^3.11.2",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "recharts": "^1.8.5",
+    "redux": "^4.0.5",
     "typescript": "^4.0.5"
   },
   "scripts": {
