--- a/package.json
+++ b/package.json
@@ -22,8 +22,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "recharts": "^1.8.5",
-    "redux": "^4.0.5",
-    "typescript": "^4.0.5"
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
